# HygherTales

./: .dockerignore  .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  eslint.config.js  package.json  tsconfig.json
.github/workflows/: release-please.yml
apps/desktop/: .env.example  README.md  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/desktop/flatpak/: com.hyghertales.desktop.metainfo.xml  com.hyghertales.desktop.yml
apps/desktop/scripts/: generate-icon-ico.mjs
apps/desktop/src/: App.css  App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/layout/: PageContainer.tsx
apps/desktop/src/lib/: api.ts  modsDb.ts  profilesDb.ts  settings.ts  shell.ts  updates.ts
apps/desktop/src/pages/: Browse.tsx  Home.tsx  Installed.tsx  Settings.tsx
apps/desktop/src/styles/: tailwind.css
apps/proxy/: .env.example  Dockerfile  README.md  build-sidecar.ts  package.json  tsconfig.json
apps/proxy/src/: .embedded-env.ts  app.ts  index.ts  loadEnv.ts
apps/proxy/src/lib/: cache.test.ts  cache.ts  curseforge.ts  curseforgeClient.ts  curseforgeMappers.test.ts  curseforgeMappers.ts  curseforgeUrl.test.ts  curseforgeUrl.ts  env.ts  errors.ts  orbis.ts  orbisUrl.ts  rateLimit.ts
apps/proxy/src/routes/: categories.ts  download.test.ts  download.ts  featured.ts  health.ts  mod.ts  orbis.ts  resolve.ts  search.ts
scripts/: build-monolith.mjs
(+9 files in other folders)
